# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml
2048/: .coverage  .coveragerc  pyproject.toml  tasks.py
2048/htmlcov/: _venv_lib_python3_8_site-packages__pytest___init___py.html  _venv_lib_python3_8_site-packages__pytest__argcomplete_py.html  _venv_lib_python3_8_site-packages__pytest__code___init___py.html  _venv_lib_python3_8_site-packages__pytest__code_code_py.html  _venv_lib_python3_8_site-packages__pytest__code_source_py.html  _venv_lib_python3_8_site-packages__pytest__io___init___py.html  _venv_lib_python3_8_site-packages__pytest__io_saferepr_py.html  _venv_lib_python3_8_site-packages__pytest__io_terminalwriter_py.html  _venv_lib_python3_8_site-packages__pytest__io_wcwidth_py.html  _venv_lib_python3_8_site-packages__pytest__version_py.html  _venv_lib_python3_8_site-packages__pytest_assertion___init___py.html  _venv_lib_python3_8_site-packages__pytest_assertion_rewrite_py.html  _venv_lib_python3_8_site-packages__pytest_assertion_truncate_py.html  _venv_lib_python3_8_site-packages__pytest_assertion_util_py.html  _venv_lib_python3_8_site-packages__pytest_cacheprovider_py.html  _venv_lib_python3_8_site-packages__pytest_capture_py.html  _venv_lib_python3_8_site-packages__pytest_compat_py.html  _venv_lib_python3_8_site-packages__pytest_config___init___py.html  _venv_lib_python3_8_site-packages__pytest_config_argparsing_py.html  _venv_lib_python3_8_site-packages__pytest_config_exceptions_py.html  _venv_lib_python3_8_site-packages__pytest_config_findpaths_py.html  (+80 more)
(+152 files in other folders)
