[tool.poetry]
name = "2048"
version = "0.1.0"
description = "2048 game"
authors = ["asnabryg <8mixu8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
