[tool.poetry]
name = "2048"
version = "0.1.0"
description = "2048 game"
authors = ["asnabryg <8mixu8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
pygame = "^2.0.1"
autopep8 = "^1.5.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
autopep8 = "^1.5.6"
coverage = "^5.5"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
